--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  elegant_spring_animation: ^2.0.2
   flutter:
     sdk: flutter
   lucide_icons: ^0.257.0
