--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,13 @@ dependencies:
   flutter:
     sdk: flutter
   lucide_icons: ^0.257.0
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
