--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,19 @@ dependencies:
   elegant_spring_animation: ^2.0.2
   flutter:
     sdk: flutter
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
   lucide_icons: ^0.257.0
-  sqflite: ^2.4.2
+  provider: ^6.1.4
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   mocktail: ^1.0.4
+  hive_ce_generator: ^1.8.2
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
