--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   elegant_spring_animation: ^2.0.2
   flutter:
     sdk: flutter
+  flutter_slidable: ^4.0.0
   hive_ce: ^2.10.1
   hive_ce_flutter: ^2.2.0
   lucide_icons: ^0.257.0
