--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  collection: ^1.19.1
   elegant_spring_animation: ^2.0.2
   flutter:
     sdk: flutter
@@ -16,6 +17,7 @@ dependencies:
   hive_ce_flutter: ^2.2.0
   lucide_icons: ^0.257.0
   provider: ^6.1.4
+  result_dart: ^2.0.0
   uuid: ^4.5.1
 
 dev_dependencies:
