--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   hive_ce_flutter: ^2.2.0
   lucide_icons: ^0.257.0
   provider: ^6.1.4
+  result_command: ^1.3.0
   result_dart: ^2.0.0
   uuid: ^4.5.1
 
